<resources>
    <string name="app_name">鸟窝习惯</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_file_name">My Recording</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_recording_start">Recording started</string>
    <string name="notification_recording">Recording...</string>
    <string name="record_in_progress">Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="voice_remind">语音提醒</string>
    <string name="text_remind">文字提醒</string>
    <string name="record_again">重新录制</string>
    <string name="finish">完成</string>
    <string name="content">内容</string>
    <string name="rank_total">总打卡</string>
    <string name="rank_constant">连续打卡</string>
    <string name="manage">管理</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="da_ka">打卡</string>
    <string name="music">铃声</string>
    <string name="volume">音量</string>
    <string name="snap">小睡一会</string>
    <string name="recieve_voice">接收朋友定制语音提醒</string>
    <string name="receive_text">接收朋友定制提醒语</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="wechat_login">微信账号登录</string>
    <string name="vibrate">振动</string>
    <string name="music_profile">自定义铃声</string>
    <string name="snap_short">小睡</string>
    <string name="nest">鸟窝</string>
    <string name="add_nest">创建鸟窝</string>
    <string name="name">名称</string>
    <string name="daka_shi">打卡事项(2-10字)</string>
    <string name="introduction">简介</string>
    <string name="introduction_hint">(0-15)字</string>
    <string name="change_day">挑战天数</string>
    <string name="start_time">开始时间</string>
    <string name="limit_amount">限定成员数量</string>
    <string name="member_amount">成员数量</string>
    <string name="clock">闹钟</string>
    <string name="advices">意见反馈</string>
    <string name="quit_current">退出当前账号</string>
    <string name="invite_friends">邀请好友加入</string>
    <string name="advice_title">反馈内容</string>
    <string name="advice_hint">我们将十分认真对待您的意见</string>
    <string name="contact_way">联系方式</string>
    <string name="phone_or_number">请留下您的电话或者QQ号</string>
    <string name="da_ka_total">总打卡</string>
    <string name="da_ka_cons">连续打卡</string>
    <string name="rank">排行榜</string>
    <string name="member_list">成员列表</string>
    <string name="member">成员</string>
    <string name="open_nest">开放鸟窝入口</string>
    <string name="remind_friend">提醒朋友</string>
    <string name="dissolve_nest">解散鸟窝</string>
    <string name="quit_nest">退出鸟窝</string>
    <string name="delete_member">将该成员从鸟窝中删除</string>
    <string name="duixiang">对象</string>
    <string name="start">起始</string>
    <string name="end">结束</string>
    <string name="long_record">长按录制</string>
    <string name="input_number_limit">输入内容不超过80字</string>
    <string name="choose">选择</string>
    <string name="choose_friend">选择对象</string>
    <string name="choose_day">选择时间</string>
    <string name="next_step">下一步</string>
    <string name="send">发送</string>
    <string name="ensure">确认</string>
    <string name="edit_alarm">编辑闹钟</string>
    <string name="edit_your_title">输入您的标题</string>
    <string name="please_choose">请选择</string>
    <string name="can_not_be_empty">不能为空</string>
    <string name="choose_nest">选择鸟窝</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="share_hint">说点什么吧</string>
    <string name="publish">发布</string>
    <string name="share_and_record">记录和分享</string>
    <string name="share_successfully">记录并发布成功</string>
    <string name="share_to_other">分享到社交圈</string>
    <string name="add_success">创建成功</string>
    <string name="delete_remind">将该提醒从列表中删除</string>
=======
>>>>>>> parent of 402203e... add ShareActvity
=======
>>>>>>> parent of 402203e... add ShareActvity
=======
>>>>>>> parent of 402203e... add ShareActvity
    <string-array name="custome_weekday">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="custom_month">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
</resources>
