<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="270dp"
                android:layout_height="175dp"
                android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/delete_member"
        android:textColor="@color/text"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/delete"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="14dp"
        android:background="@drawable/btn_background_red"
        android:elevation="5dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/cancel"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/btn_background_gray"
        android:elevation="5dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</RelativeLayout>