<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    tools:context="com.victor.nesthabit.ui.activity.AdviceActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellow_background"
        android:elevation="5dp"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:src="@drawable/back"
            />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/advices"
            android:textColor="@color/text_clock"
            android:textSize="18dp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/advice_card_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:elevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/advice_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/advice_title"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/advice_title"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/fenge"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/advice_title"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/advice_hint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/contact_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/advice_card_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/contact_way"
                android:textColor="@color/text_color"
                android:textSize="17dp"
                />

            <EditText
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/phone_or_number"
                android:textColorHint="@color/gray_progress"
                android:textSize="16sp"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/contact_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_background_red"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:elevation="5dp"
        />
</RelativeLayout>
