<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_background"
    tools:context="com.victor.nesthabit.ui.activity.AddRemindActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:src="@drawable/back_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/remind_friend"
            android:textColor="@color/background"
            android:textSize="19dp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/voice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            >

            <RelativeLayout
                android:id="@+id/voice_text_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/voice_remind"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/record_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/record_again"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#ECEFF1"
                    />
            </RelativeLayout>

            <ImageView
                android:id="@+id/record"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_below="@+id/voice_text_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:elevation="5dp"
                android:src="@drawable/tape"
                />

            <TextView
                android:id="@+id/record_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/long_record"
                android:textColor="@color/text"
                android:textSize="12sp"
                />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@color/text"
                android:textSize="12sp"
                android:visibility="invisible"
                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/voice_layout"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            >

            <RelativeLayout
                android:id="@+id/text_text_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/text_remind"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="#ECEFF1"
                    />
            </RelativeLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_text_layout"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/input_number_limit"
                android:textColor="@color/mygray"
                android:textSize="14sp"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/finish"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_background_yellow"
        android:elevation="5dp"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        />

</RelativeLayout>
