<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_background"
    tools:context="com.victor.nesthabit.ui.activity.AddAlarmActivity"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/back_white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_nest"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </RelativeLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#99ECEFF1"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/name"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:background="@null"
                    android:hint="@string/daka_shi"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/gray_progress"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="16sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/fenge"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/introduction_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/name_layout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/introduction"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />

                <EditText
                    android:id="@+id/introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/introduction_hint"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/gray_progress"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="16dp"
                    />

            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/layout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_one"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#99ECEFF1"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/day_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/change_day"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />

                <EditText
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="0~999"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/gray_progress"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="17dp"
                    />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/fenge"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/begin_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/day_layout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/start_time"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />

                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="25dp"
                    android:text="2017-07-12"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/right"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/layout_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_two"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#99ECEFF1"
        app:cardCornerRadius="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:id="@+id/amount_limit_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/limit_amount"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />


                <com.victor.nesthabit.view.SwitchButton
                    android:id="@+id/limit_toggle"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    app:marginHeight="15dp"
                    app:offColor="@color/offcolor"
                    app:onColor="@color/offcolor"
                    app:spotColoroff="@color/spot_off"
                    app:spotColoron="@color/name_color"
                    app:swBorderWidth="0dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/fenge"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/amount_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/amount_limit_layout"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/member_amount"
                    android:textColor="@color/text_color"
                    android:textSize="17dp"
                    />

                <EditText
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:hint="1~99"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_progress"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="16sp"
                    />

            </RelativeLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submit"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_three"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_background_yellow"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

</RelativeLayout>
